@@ -1,5 +1,14 @@
 2008-02-19  Andrea Cimitan  <andrea.cimitan@gmail.com>
 
+	* src/murrine_draw_rgba.c: (murrine_rgba_draw_tooltip),
+	(murrine_rgba_draw_menu_frame), (murrine_register_style_rgba):
+	* src/murrine_style.c: (murrine_style_draw_flat_box),
+	(murrine_style_draw_shadow):
+	* src/support.h:
+	Rounded Tooltips
+
+2008-02-19  Andrea Cimitan  <andrea.cimitan@gmail.com>
+
 	* src/support.h:
 	Minor tweaks in transparency
 
